# template-video-player

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  ImguiRenderer.cpp  ImguiRenderer.hpp  app.cpp
src/app/widgets/: CMakeLists.txt  FileDialog.cpp  FileDialog.hpp
src/decoder/: CMakeLists.txt  audio_demux_decode.cpp  audio_demux_decode.hpp  main.cpp  video_reader.cpp  video_reader.hpp
